--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-form-data": "^2.0.14",
+    "express-pino-logger": "^7.0.0",
     "express-session": "^1.16.2",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
@@ -44,6 +45,7 @@
     "nodemailer": "^6.6.0",
     "normalize-scss": "^7.0.1",
     "npmlog": "^7.0.1",
+    "pino": "^8.14.1",
     "pug": "^2.0.4",
     "run-sequence": "^2.2.1",
     "session-file-store": "^1.3.0"
