--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-pino-logger": "^7.0.0",
+    "pino": "^8.14.1"
   },
   "devDependencies": {
     "nodemon": "^1.18.6"
